--- a/package.json
+++ b/package.json
@@ -9,14 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.3.1",
+    "@emotion/react": "^11.14.0",
+    "@types/js-cookie": "^3.0.6",
+    "@types/lodash": "^4.17.14",
+    "axios": "^1.7.9",
+    "cross-env": "^7.0.3",
+    "dayjs": "^1.11.13",
+    "dotenv": "^16.4.7",
+    "emotion-icons": "^3.27.0",
+    "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
+    "next": "15.1.4",
+    "next-themes": "^0.4.4",
+    "nookies": "^2.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.4"
+    "react-hook-form": "^7.54.2",
+    "react-icons": "^5.4.0",
+    "swr": "^2.3.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
-    "@types/react-dom": "^19"
+    "@types/react-dom": "^19",
+    "typescript": "^5"
   }
 }
